--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                         </div>
                         <div class="home__data">
                             <h1 class="home__title">Hi, I'am Ajay</h1>
-                            <h3 class="home__subtitle">Security automation professional and <br> curious Data Engineer and  <i class="uil uil-user-md"></i></h3>
+                            <h3 class="home__subtitle">Security automation professional and <br> curious Data Engineer  <i class="uil uil-user-md"></i></h3>
 
                             <p class="home__description">
                                 Passionate technology enthusiast with 5+ yrs of security automation experience in Reliance Industries Ltd.
