--- a/index.html
+++ b/index.html
@@ -586,8 +586,8 @@
                             <i class="uil uil-phone contact__icon"></i>
 
                             <div>
-                                <h3 class="contact__title">Call me</h3>
-                                <span class="contact__subtitle">926-587-3398</span>
+                                <h3 class="contact__title">Message me</h3>
+                                <span class="contact__subtitle">On Twitter- Join2AJ</span>
                             </div>
                         </div>
                         <div class="contact__information">
@@ -608,7 +608,7 @@
                         </div>
                     </div>
 
-                    <form name="contact" id="ContactForm" class="cpntact__form grid" data-netlify-recaptcha="true" data-netlify="true" action="https://wa.me/919265873398?text=">
+                    <form name="contact" id="ContactForm" class="cpntact__form grid" data-netlify-recaptcha="true" data-netlify="true" action="https://twitter.com/join2AJ">
                         <!-- <div class="contact__inputs grid">
                             <div class="contact__content">
                                 <label for="" class="contact__label">Name</label>
@@ -630,7 +630,7 @@
                         <div data-netlify-recaptcha="true"></div>
                         <div>
                             <a class="button button--flex" id="submitButton">
-                                Whatsapp Me
+                                DM me on Twitter
                                 <i class="uil uil-message project__icon button__icon"></i>
                             </a>
                         </div>
