--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                             <h3 class="home__subtitle">Security automation professional and <br> curious Data Engineer  <i class="uil uil-user-md"></i></h3>
 
                             <p class="home__description">
-                                Passionate technology enthusiast with 5+ yrs of security automation experience in Reliance Industries Ltd.
+                                Passionate technology enthusiast with 5+ yrs of security automation experience in Reliance Industries Ltd. and currently serving in Tatasteel Pvt Ltd.
                             </p>
                             <a href="#contact" class="button button--flex">Contact me <i class="uil uil-message button__icon"></i></a>
                         </div>
@@ -184,7 +184,7 @@
                         </div>
 
                         <div class="about__buttons">
-                            <a download="" href="assets/pdf/Ajay Kumar - 5+ Security Professional.pdf" class="button button--flex">
+                            <a download="" href="assets/pdf/Data Analyst - Ajay Kumar.pdf" class="button button--flex">
                                 Download Resume<i class="uil uil-file-download-alt button__icon"></i>
                             </a>
                         </div>
