--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
                         </p>
                         <div class="about__info">
                             <div>
-                                <span class="about__info-title">5+</span>
-                                <span class="about__info-name">Programing<br> languages</span>
+                                <span class="about__info-title">Python</span>
+                                <span class="about__info-name">Favourite<br> languages</span>
                             </div>
                             <div>
                                 <span class="about__info-title">2</span>
