--- a/index.html
+++ b/index.html
@@ -580,9 +580,10 @@
                                 <i class="uil uil-message project__icon button__icon"></i>
                             </a>
                         </div>
-
+                    
                         <div id="animContainer"></div>
                         <!-- <img src="assets/img/project.png" alt="project"> -->
+                    </div>
                     </div>
                 </div>
             </section>
