--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
             <section class="section project-all" id="project">
                 <div class="project_bg">
                     <div class="project__container container grid" id="project-spectacular">
-                        <div class="project__data">
+                        <div class="project__data" style="padding-right: 10px;>
                             <h2 class="project__title">If you have something to say</h2>
                             <p class="project__description">Contact me below, I'm always open for suggestions and collaboration !</p>
                             <a href="#contact" class="button button--flex button--white">
@@ -581,9 +581,8 @@
                             </a>
                         </div>
                     
-                        <div id="animContainer"></div>
+                        <div id="animContainer"> </div>
                         <!-- <img src="assets/img/project.png" alt="project"> -->
-                    </div>
                     </div>
                 </div>
             </section>
@@ -662,6 +661,12 @@
                     </div> -->
                 
                     <ul class="footer__links">
+                        <li>
+                            <a href="#home" class="footer__link">Home</a>
+                        </li>
+                        <li>
+                            <a href="#about" class="footer__link">About Me</a>
+                        </li>
                         <li>
                             <a href="#skills" class="footer__link">Skills</a>
                         </li>
