--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@
                         <span class="footer__subtitle">Curious Data Engineer and Security automation professional</span>
                     </div> -->
                 
-                    <ul class="footer__links">
+                    <ul class="footer__links text-left mx-auto">
                         <li>
                             <a href="#home" class="footer__link">Home</a>
                         </li>
