--- a/index.html
+++ b/index.html
@@ -660,12 +660,12 @@
                         <span class="footer__subtitle">Curious Data Engineer and Security automation professional</span>
                     </div> -->
                 
-                    <ul class="footer__links text-left mx-auto">
+                    <ul class="footer__links">
                         <li>
                             <a href="#home" class="footer__link">Home</a>
                         </li>
                         <li>
-                            <a href="#about" class="footer__link">About_Me</a>
+                            <a href="#about" class="footer__link">About</a>
                         </li>
                         <li>
                             <a href="#skills" class="footer__link">Skills</a>
